--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -26,6 +26,32 @@
         "uiTheme": "vs",
         "path": "./themes/leuven.json"
       }
+      ,
+      {
+        "label": "Doom One",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-one.json"
+      },
+      {
+        "label": "Doom Dracula",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-dracula.json"
+      },
+      {
+        "label": "Doom Monokai Pro",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-monokai-pro.json"
+      },
+      {
+        "label": "Doom Peacock",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-peacock.json"
+      },
+      {
+        "label": "Doom Ayu Dark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-ayu-dark.json"
+      }
     ]
   }
 }
