convert implementation by claude sonnet 3.5

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -12,45 +12,19 @@
   "contributes": {
     "themes": [
       {
-        "label": "Spacemacs Dark",
+        "label": "leuven",
+        "uiTheme": "vs",
+        "path": "./themes/leuven.json"
+      },
+      {
+        "label": "spacemacs-dark",
         "uiTheme": "vs-dark",
         "path": "./themes/spacemacs-dark.json"
       },
       {
-        "label": "Spacemacs Light",
+        "label": "spacemacs-light",
         "uiTheme": "vs",
         "path": "./themes/spacemacs-light.json"
-      },
-      {
-        "label": "Leuven",
-        "uiTheme": "vs",
-        "path": "./themes/leuven.json"
-      }
-      ,
-      {
-        "label": "Doom One",
-        "uiTheme": "vs-dark",
-        "path": "./themes/doom-one.json"
-      },
-      {
-        "label": "Doom Dracula",
-        "uiTheme": "vs-dark",
-        "path": "./themes/doom-dracula.json"
-      },
-      {
-        "label": "Doom Monokai Pro",
-        "uiTheme": "vs-dark",
-        "path": "./themes/doom-monokai-pro.json"
-      },
-      {
-        "label": "Doom Peacock",
-        "uiTheme": "vs-dark",
-        "path": "./themes/doom-peacock.json"
-      },
-      {
-        "label": "Doom Ayu Dark",
-        "uiTheme": "vs-dark",
-        "path": "./themes/doom-ayu-dark.json"
       }
     ]
   }
