add and convert more themes

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -12,9 +12,169 @@
   "contributes": {
     "themes": [
       {
+        "label": "dichromacy",
+        "uiTheme": "vs",
+        "path": "./themes/dichromacy.json"
+      },
+      {
+        "label": "doom-1337",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-1337.json"
+      },
+      {
+        "label": "doom-Iosvkem",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-Iosvkem.json"
+      },
+      {
+        "label": "doom-acario-dark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-acario-dark.json"
+      },
+      {
+        "label": "doom-acario-light",
+        "uiTheme": "vs",
+        "path": "./themes/doom-acario-light.json"
+      },
+      {
+        "label": "doom-ayu-dark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-ayu-dark.json"
+      },
+      {
+        "label": "doom-ayu-light",
+        "uiTheme": "vs",
+        "path": "./themes/doom-ayu-light.json"
+      },
+      {
+        "label": "doom-ayu-mirage",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-ayu-mirage.json"
+      },
+      {
+        "label": "doom-badger",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-badger.json"
+      },
+      {
+        "label": "doom-bluloco-dark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-bluloco-dark.json"
+      },
+      {
+        "label": "doom-bluloco-light",
+        "uiTheme": "vs",
+        "path": "./themes/doom-bluloco-light.json"
+      },
+      {
+        "label": "doom-challenger-deep",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-challenger-deep.json"
+      },
+      {
+        "label": "doom-city-lights",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-city-lights.json"
+      },
+      {
+        "label": "doom-dark+",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-dark+.json"
+      },
+      {
+        "label": "doom-dracula",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-dracula.json"
+      },
+      {
+        "label": "doom-earl-grey",
+        "uiTheme": "vs",
+        "path": "./themes/doom-earl-grey.json"
+      },
+      {
+        "label": "doom-ephemeral",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-ephemeral.json"
+      },
+      {
+        "label": "doom-fairy-floss",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-fairy-floss.json"
+      },
+      {
+        "label": "doom-feather-dark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-feather-dark.json"
+      },
+      {
+        "label": "doom-feather-light",
+        "uiTheme": "vs",
+        "path": "./themes/doom-feather-light.json"
+      },
+      {
+        "label": "doom-flatwhite",
+        "uiTheme": "vs",
+        "path": "./themes/doom-flatwhite.json"
+      },
+      {
+        "label": "doom-gruvbox-light",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-gruvbox-light.json"
+      },
+      {
+        "label": "doom-henna",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-henna.json"
+      },
+      {
+        "label": "doom-homage-black",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-homage-black.json"
+      },
+      {
+        "label": "doom-homage-white",
+        "uiTheme": "vs",
+        "path": "./themes/doom-homage-white.json"
+      },
+      {
+        "label": "doom-horizon",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-horizon.json"
+      },
+      {
+        "label": "doom-ir-black",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-ir-black.json"
+      },
+      {
+        "label": "doom-lantern",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-lantern.json"
+      },
+      {
+        "label": "doom-manegarm",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-manegarm.json"
+      },
+      {
+        "label": "doom-material-dark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/doom-material-dark.json"
+      },
+      {
         "label": "leuven",
         "uiTheme": "vs",
         "path": "./themes/leuven.json"
+      },
+      {
+        "label": "modus-operandi",
+        "uiTheme": "vs",
+        "path": "./themes/modus-operandi.json"
+      },
+      {
+        "label": "modus-vivendi",
+        "uiTheme": "vs-dark",
+        "path": "./themes/modus-vivendi.json"
       },
       {
         "label": "spacemacs-dark",
