--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -1,8 +1,13 @@
 {
   "name": "emacs-themes",
-  "displayName": "Emacs Themes for VS Code",
-  "description": "Popular Emacs themes (Spacemacs, Leuven) converted for VS Code",
+  "displayName": "Emacs Themes Ported",
+  "description": "Popular Emacs themes ported for VS Code",
   "version": "0.0.1",
+  "publisher": "voidfoo",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/voidfoo/emacs-theme-to-vscode/tree/main/vscode-extension"
+  },
   "engines": {
     "vscode": "^1.105.0"
   },
